--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,14 @@ apply plugin: 'eclipse'
 sourceCompatibility = 1.8
 
 repositories {
+	flatFir{
+		dirs 'lib'
+	}
+
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile name: 'TSP'
 }
