added application plugin config to run

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
+mainClassName ="com.septanome.util.test"
 
 repositories {
 	flatDir{
