--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'idea'
 apply plugin: 'application'
 
 sourceCompatibility = 1.8
-mainClassName ="com.septanome.test.Test"
+mainClassName ="com.septanome.ihm.Dashboard"
 
 repositories {
 	flatDir{
